--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,6 +2,11 @@
 <%= form_tag students_path do %>
 
 <label> First Name: </label><br>
-< type
+<%= text_field_tag :'first_name' %><br>
+
+<label> Last Name: </label><br>
+<%= text_field_tag :'last_name' %><br>
+
+<%= submit_tag "Submit Student" %>
 
 <% end %>
